# vehiclesim

./: README.md  pyproject.toml
tests/: genNavMatrices.py  lat_sim_plotter.py  rollEKF_sim.py  test_run.py  tract_trail_lat_exp.py  tract_trail_lat_sim.py  tract_trail_roll_sim.py  trailer_stability_analysis.py  trailer_stability_data_loader.py
tests/veh_config/tractor_trailer/: 3a_config.yaml  5a_config.yaml
vehiclesim/: 5a_derivation.py  imu_sim.py  lat_nav_plotter.py  roll_derivation.py  tractor_trailer.py
vehiclesim/derivations/: 3a_derivation.py  5a_derivation.py  roll_derivation.py
vehiclesim/vehicle_configs/: 5a_config.yaml
