[tool.poetry]
name = "vehiclesim"
version = "0.1.0"
description = ""
authors = ["pzt0029 <pzt002@auburn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pytest = "^8.1.1"
python-utilities = {path="C:\\Users\\pzt0029\\Documents\\Python_Utilities\\python_utilities", develop=true}
control = "^0.9.4"
python-math = "^0.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
