[tool.poetry]
name = "vehiclesim"
version = "0.1.0"
description = ""
authors = ["pzt0029 <pzt002@auburn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
numpy = "^1.26.4"
pytest = "^8.1.1"
control = "^0.9.4"
python-math = "^0.0.1"
sympy = "^1.12.1"
algebra-with-sympy = "^1.0.2"
tbcontrol = "^0.2.1"
python-utilities = {path="C:\\Users\\pzt0029\\Documents\\Python_Utilities\\python_utilities", develop=true} #Local
# python-utilities = {git="https://github.com/TahnT-Auburn/python_utilities.git"}                           #Git
filter-tools = {path ="C:\\Users\\pzt0029\\Documents\\Filter_Tools\\filter_tools", develop=true} #Local
seaborn = "^0.13.2"
scipy = "^1.14.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
